# aoc2023

./: README.md  aoc2023.cabal  fourmolu.yaml
app/: Main.hs
src/: Common.hs  Day1.hs
