cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

author:             Shmuel Hancoh
maintainer:         shmuelhanoch@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Common,
        Day1

    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2023
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.0.0,
        megaparsec ^>=9.6.1,
        replace-megaparsec ^>=1.5.0.1,
        text ^>=2.1,
        aoc2023

    hs-source-dirs:   app
    default-language: Haskell2010
